--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -4,7 +4,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <meta charset="UTF-8">
         <title>{% block title %}Trouvé{% endblock %}</title>
-        {% block stylesheets %}{% endblock %}
+        {% block stylesheet %}
+            <link rel="stylesheet" href="{{ asset('build/app.css') }}">
+        {% endblock %}
     </head>
     {% block navigation %}
         <div class="fixed-top d-flex flex-column flex-md-row align-items-center p-3 px-md-4 bg-white border-bottom shadow-sm">
@@ -29,8 +31,130 @@
     {% endblock %}
 
     <body>
-        {% block body %}{% endblock %}
-        {% block javascripts %}{% endblock %}
+        {% block body %}
+            <main class="main-content">
+
+                <header class="header-home">
+                    <div class="container header-home-container">
+                        <h1>Traoùvé, premier service d'objets trouvés en Bretagne</h1>
+                        <p>Déposez une annonce ou retrouvez un objet perdu grâce à notre communauté. Déjà <strong>4521</strong> objets retrouvés grâce à notre plateforme de mise en relation !</p>
+                        <section class="row">
+                            <article class="col-md-4">
+                                <a class="btn btn-primary" href="form-lost.html">
+                                    <i class="fa fa-plus-circle"></i>
+                                    <h2>Créer un avis de recherche</h2>
+                                </a>
+                            </article>
+                            <article class="col-md-4">
+                                <a class="btn btn-info" href="form-found.html">
+                                    <i class="fa fa-map-pin"></i>
+                                    <h2>Déclarer un objet trouvé</h2>
+                                </a>
+                            </article>
+                            <article class="col-md-4">
+                                <a class="btn btn-danger" href="form-search.html">
+                                    <i class="fa fa-search"></i>
+                                    <h2>Rechercher un objet perdu</h2>
+                                </a>
+                            </article>
+                        </section>
+                    </div>
+                </header>
+
+                <div class="container">
+                    <h2>Les derniers objets trouvés</h2>
+                    <section class="row">
+                        <article class="col-md-3">
+                            <div class="card object-card">
+                                <span class="badge badge-primary badge-found"><i class="fa fa-map-pin"></i> Trouvé</span>
+                                <img class="card-img-top" src="uploads/wallet.jpg" alt="Portefeuille">
+                                <div class="card-body">
+                                    <h5 class="card-title">Portefeuille retrouvé à l'arrêt de bus</h5>
+                                    <ul class="object-features">
+                                        <li><a href="#" class="badge" style="background-color: #dc143c;"><i class="fa fa-money"></i> Portefeuille</a></li>
+                                        <li><a href="#" class="badge badge-info"><i class="fa fa-calendar"></i> 21/11/2018</a></li>
+                                        <li><a href="#" class="badge badge-info"><i class="fa fa-map-marker"></i> Rennes</a></li>
+                                    </ul>
+                                </div>
+                                <a href="object.html" class="card-footer-btn btn btn-primary"><i class="fa fa-eye"></i> Afficher</a>
+                            </div>
+                        </article>
+                        {% for item in items %}
+
+                            <article class="col-md-3">
+                                <div class="card object-card">
+                                    <span class="badge badge-primary badge-found"><i class="fa fa-map-pin"></i> Trouvé</span>
+                                    <img class="card-img-top" src="uploads/keys.jpg" alt="Clés">
+                                    <div class="card-body">
+                                        <h5 class="card-title">{{ item.name }}</h5>
+                                        <ul class="object-features">
+                                            <li><a href="#" class="badge" style="background-color: #1480dc;"><i class="fa fa-key"></i> {{ item.category.label }}</a></li>
+                                            <li><a href="#" class="badge badge-info"><i class="fa fa-calendar"></i> 19/11/2018</a></li>
+                                            <li><a href="#" class="badge badge-info"><i class="fa fa-map-marker"></i> Brest</a></li>
+                                        </ul>
+                                    </div>
+                                    <a href="object.html" class="card-footer-btn btn btn-primary"><i class="fa fa-eye"></i> Afficher</a>
+                                </div>
+                            </article>
+                            
+                        {% endfor %}
+                        <article class="col-md-3">
+                            <div class="card object-card">
+                                <span class="badge badge-primary badge-found"><i class="fa fa-map-pin"></i> Trouvé</span>
+                                <img class="card-img-top" src="uploads/keys.jpg" alt="Clés">
+                                <div class="card-body">
+                                    <h5 class="card-title">Clés rue du général de Gaulle</h5>
+                                    <ul class="object-features">
+                                        <li><a href="#" class="badge" style="background-color: #1480dc;"><i class="fa fa-key"></i> Clés</a></li>
+                                        <li><a href="#" class="badge badge-info"><i class="fa fa-calendar"></i> 19/11/2018</a></li>
+                                        <li><a href="#" class="badge badge-info"><i class="fa fa-map-marker"></i> Brest</a></li>
+                                    </ul>
+                                </div>
+                                <a href="object.html" class="card-footer-btn btn btn-primary"><i class="fa fa-eye"></i> Afficher</a>
+                            </div>
+                        </article>
+                    </section>
+                </div>
+
+                <div class="container">
+                    <h2>Les derniers objets perdus</h2>
+                    <section class="row">
+                        <article class="col-md-3">
+                            <div class="card object-card">
+                                <span class="badge badge-primary badge-lost"><i class="fa fa-map-pin"></i> Perdu</span>
+                                <img class="card-img-top" src="uploads/teddy-bear.jpg" alt="Jouet">
+                                <div class="card-body">
+                                    <h5 class="card-title">Ours en peluche à Sainte-Anne</h5>
+                                    <ul class="object-features">
+                                        <li><a href="#" class="badge" style="background-color: #dccd14;"><i class="fa fa-money"></i> Jouet</a></li>
+                                        <li><a href="#" class="badge badge-info"><i class="fa fa-calendar"></i> 19/11/2018</a></li>
+                                        <li><a href="#" class="badge badge-info"><i class="fa fa-map-marker"></i> Rennes</a></li>
+                                    </ul>
+                                </div>
+                                <a href="object.html" class="card-footer-btn btn btn-primary"><i class="fa fa-eye"></i> Afficher</a>
+                            </div>
+                        </article>
+                        <article class="col-md-3">
+                            <div class="card object-card">
+                                <span class="badge badge-primary badge-lost"><i class="fa fa-map-pin"></i> Perdu</span>
+                                <div class="card-logo-top" style="background-color: #1480dc;"><i class="fa fa-key"></i></div>
+                                <div class="card-body">
+                                    <h5 class="card-title">Clés perdues à l'IUT</h5>
+                                    <ul class="object-features">
+                                        <li><a href="#" class="badge" style="background-color: #1480dc;"><i class="fa fa-key"></i> Clés</a></li>
+                                        <li><a href="#" class="badge badge-info"><i class="fa fa-calendar"></i> 12/11/2018</a></li>
+                                        <li><a href="#" class="badge badge-info"><i class="fa fa-map-marker"></i> Vannes</a></li>
+                                    </ul>
+                                </div>
+                                <a href="object.html" class="card-footer-btn btn btn-primary"><i class="fa fa-eye"></i> Afficher</a>
+                            </div>
+                        </article>
+                    </section>
+                </div>
+
+            </main>
+        {% endblock %}
+
         {% block footer %}
             <div class="container">
                 <footer class="pt-4 my-md-5 pt-md-5 border-top">
@@ -78,6 +202,9 @@
             </div>
         {% endblock %}
 
-        <script src="main.js"></script>
+        {% block javascripts %}
+            <script src="{{ asset('build/app.js') }}"></script>
+        {% endblock %}
+
     </body>
 </html>
