--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -18,7 +18,7 @@
                 Traoùvé
             </h5>
             <nav class="my-2 my-md-0 mr-md-3">
-                <a class="p-2 text-dark" href="index.html">Accueil</a>
+                <a class="p-2 text-dark" href="{{ path('homepage') }}">Accueil</a>
                 <a class="p-2 text-dark" href="form.html">Déposer une annonce</a>
                 <a class="p-2 text-dark" href="list-lost.html">Objets perdus</a>
                 <a class="p-2 text-dark" href="list-found.html">Objets trouvés</a>
@@ -31,8 +31,9 @@
     {% endblock %}
 
     <body>
+        <main class="main-content">
         {% block body %}
-            <main class="main-content">
+
 
                 <header class="header-home">
                     <div class="container header-home-container">
@@ -82,8 +83,9 @@
                     </section>
                 </div>
 
-            </main>
+
         {% endblock %}
+        </main>
 
         {% block footer %}
             <div class="container">
@@ -106,13 +108,10 @@
                             )) }}
                         </div>
                         <div class="col-6 col-md">
-                            <h5>Villes</h5>
-                            <ul class="list-unstyled text-small">
-                                <li><a class="text-muted" href="#">Rennes</a></li>
-                                <li><a class="text-muted" href="#">Brest</a></li>
-                                <li><a class="text-muted" href="#">Vannes</a></li>
-                                <li><a class="text-muted" href="#">St Malo</a></li>
-                            </ul>
+                            <h5>Départements</h5>
+                            {{ render(controller(
+                                'App\\Controller\\CountyController::listing'
+                            )) }}
                         </div>
                         <div class="col-6 col-md">
                             <h5>Notre entreprise</h5>
