--- a/templates/category/show.html.twig
+++ b/templates/category/show.html.twig
@@ -3,7 +3,13 @@
 {% block title %}Category{% endblock %}
 
 {% block body %}
-    <h1>Category</h1>
+    <div class="container">
+    <h1>{{ category.label }}</h1>
+        <ul>
+            {% for item in items %}
+                <li><a href="{{ path('item_show', {'id' : item.id}) }}">{{ item.name }}</a></li>
+            {% endfor %}
+        </ul>
 
     <table class="table">
         <tbody>
@@ -31,4 +37,5 @@
     <a href="{{ path('category_edit', {'id': category.id}) }}">edit</a>
 
     {{ include('category/_delete_form.html.twig') }}
+    </div>
 {% endblock %}
