--- a/templates/item/show.html.twig
+++ b/templates/item/show.html.twig
@@ -84,9 +84,9 @@
             </div>
             <footer class="card-footer">
                 <ul class="object-features">
-                    <li><a href="#" class="badge" style="background-color: {{ item.category.color }};"><i class="fa {{ item.category.icon }}"></i> {{ item.category.label }}</a></li>
-                    <li><a href="#" class="badge badge-info"><i class="fa fa-calendar"></i> {{ item.datebeginformatted }}</a></li>
-                    <li><a href="#" class="badge badge-info"><i class="fa fa-map-marker"></i> {{ item.city }}</a></li>
+                    <li><a href="{{ path('category_show', {'id' : item.category.id}) }}" class="badge" style="background-color: {{ item.category.color }};"><i class="fa {{ item.category.icon }}"></i> {{ item.category.label }}</a></li>
+                    <li><a href="#" class="badge badge-info"><i class="fa fa-calendar"></i> {{ item.datebegin|date("d/m/Y") }}</a></li>
+                    <li><a href="" class="badge badge-info"><i class="fa fa-map-marker"></i> {{ item.city }}</a></li>
                 </ul>
             </footer>
         </div>
