--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -20,8 +20,8 @@
             <nav class="my-2 my-md-0 mr-md-3">
                 <a class="p-2 text-dark" href="{{ path('homepage') }}">Accueil</a>
                 <a class="p-2 text-dark" href="form.html">Déposer une annonce</a>
-                <a class="p-2 text-dark" href="list-lost.html">Objets perdus</a>
-                <a class="p-2 text-dark" href="list-found.html">Objets trouvés</a>
+                <a class="p-2 text-dark" href="{{ path('item_list', {'status' : constant('App\\Entity\\Status::LOST')}) }}">Objets perdus</a>
+                <a class="p-2 text-dark" href="{{ path('item_list', {'status' : constant('App\\Entity\\Status::FOUND')}) }}">Objets trouvés</a>
             </nav>
             {% if is_granted('IS_AUTHENTICATED_FULLY') %}
             <div class="btn brn-outline-primary btn-space">
