--- a/templates/item/show.html.twig
+++ b/templates/item/show.html.twig
@@ -81,6 +81,22 @@
                         <p>{{ item.description }}</p>
                     </div>
                 </div>
+                <div class="d-flex">
+                    <div class="flex-fill d-flex justify-content-end align-items-center">
+                        <p>Par <b>{{ item.user.fullname }}</b></p>
+                    </div>
+                    <div>
+                        {% if item.user.photo == null %}
+                            <div class="img-thumbnail imgless-item imgless-item--user">
+                                <i class="fa fa-user"></i>
+                            </div>
+                            {% else %}
+                                <img src="{{ asset('uploads/' ~ item.user.photo) }}" alt="{{ item.user.fullname }}">
+                        {% endif %}
+
+                        <p></p>
+                    </div>
+                </div>
             </div>
             <footer class="card-footer">
                 <ul class="object-features">
