--- a/templates/security/register.html.twig
+++ b/templates/security/register.html.twig
@@ -1,42 +1,16 @@
 {% extends "base.html.twig" %}
 {% block body %}
     <div class="container">
-        <h1 class="h3 mb-3">S'enregistrer</h1>
+        <h1 class="mb-3">S'enregistrer</h1>
         {{ form_start(form) }}
 
 
-        {{ form_label(form.email) }}
-        {{ form_widget(form.email) }}
+        {{ form_row(form.email) }}
 
-        {% if form.email.vars.errors|length > 0 %}
-            <ul class="form-errors name">
-                {% for error in form.email.vars.errors %}
-                    {{ error }}
-                {% endfor %}
-            </ul>
-        {% endif %}
+        {{ form_row(form.firstname) }}
 
-        {{ form_label(form.firstname) }}
-        {{ form_widget(form.firstname) }}
+        {{ form_row(form.lastname) }}
 
-        {% if form.firstname.vars.errors|length > 0 %}
-            <ul class="form-errors name">
-                {% for error in form.firstname.vars.errors %}
-                    {{ error }}
-                {% endfor %}
-            </ul>
-        {% endif %}
-
-        {{ form_label(form.lastname) }}
-        {{ form_widget(form.lastname) }}
-
-        {% if form.lastname.vars.errors|length > 0 %}
-            <ul class="form-errors name">
-                {% for error in form.lastname.vars.errors %}
-                    {{ error }}
-                {% endfor %}
-            </ul>
-        {% endif %}
 
         {{ form_row(form.plainPassword.first) }}
         {{ form_row(form.plainPassword.second) }}
