--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -19,7 +19,7 @@
             </h5>
             <nav class="my-2 my-md-0 mr-md-3">
                 <a class="p-2 text-dark" href="{{ path('homepage') }}">Accueil</a>
-                <a class="p-2 text-dark" href="form.html">Déposer une annonce</a>
+                <a class="p-2 text-dark" href="{{ path('item_new') }}">Déposer une annonce</a>
                 <a class="p-2 text-dark" href="{{ path('item_list', {'status' : constant('App\\Entity\\Status::LOST')}) }}">Objets perdus</a>
                 <a class="p-2 text-dark" href="{{ path('item_list', {'status' : constant('App\\Entity\\Status::FOUND')}) }}">Objets trouvés</a>
             </nav>
