--- a/templates/item/_form.html.twig
+++ b/templates/item/_form.html.twig
@@ -1,4 +1,25 @@
 {{ form_start(form) }}
-    {{ form_widget(form) }}
-    <button class="btn">{{ button_label|default('Save') }}</button>
+<div class="form">
+{{ form_row(form.name)}}
+
+{{ form_row(form.description) }}
+
+{{ form_row(form.photo) }}
+
+{{ form_label(form.name, 'Catégorie' )}}
+{{ form_widget(form.category) }}
+
+{{ form_row(form.dateBegin) }}
+
+{{ form_label(form.county, 'Département' )}}
+{{ form_widget(form.county) }}
+
+{{ form_row(form.city) }}
+
+{{ form_row(form.address) }}
+
+{{ form_label(form.status, 'Statut' )}}
+{{ form_widget(form.status) }}
+</div>
+    <button class="btn">{{ button_label|default('Déposer mon annonce') }}</button>
 {{ form_end(form) }}
