--- a/templates/item/new.html.twig
+++ b/templates/item/new.html.twig
@@ -3,9 +3,19 @@
 {% block title %}New Item{% endblock %}
 
 {% block body %}
-    <h1>Create new Item</h1>
-
-    {{ include('item/_form.html.twig') }}
-
-    <a href="{{ path('item_index') }}">back to list</a>
+    <div class="container">
+        <h1>Déposer une annonce</h1>
+        {% if is_granted('IS_AUTHENTICATED_FULLY') %}
+            {{ include('item/_form.html.twig') }}
+        {% else %}
+            <div class="alert alert-secondary" role="alert">
+                <p>Veuillez vous connecter afin de pouvoir déposer une annonce</p>
+                <a href="{{ path('app_login') }}" class="btn btn-primary">
+                    <i class="fa fa-sign-in"></i>
+                    Me connecter
+                </a>
+            </div>
+        {% endif %}
+        <a href="{{ path('item_index') }}">back to list</a>
+    </div>
 {% endblock %}
