--- a/templates/item/new.html.twig
+++ b/templates/item/new.html.twig
@@ -6,7 +6,22 @@
     <div class="container">
         <h1>Déposer une annonce</h1>
         {% if is_granted('IS_AUTHENTICATED_FULLY') %}
-            {{ include('item/_form.html.twig') }}
+            <ul class="nav nav-tabs" role="tablist">
+                <li class="nav-item">
+                    <a class="nav-link active" id="found-tab" data-toggle="tab" href="#found" role="tab" aria-controls="found" aria-selected="true">Objet trouvé</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" id="lost-tab" data-toggle="tab" href="#lost" role="tab" aria-controls="lost" aria-selected="false">Objet perdu</a>
+                </li>
+            </ul>
+            <div class="tab-content">
+                <div class="tab-pane fade show active" id="found" role="tabpanel" aria-labelledby="found-tab">
+                    {% include 'item/_form.html.twig' with {'form': formFound, 'status': statusFound} only %}
+                </div>
+                <div class="tab-pane fade" id="lost" role="tabpanel" aria-labelledby="lost-tab">
+                    {% include 'item/_form.html.twig' with {'form': formLost, 'status': statusLost} only %}
+                </div>
+            </div>
         {% else %}
             <div class="alert alert-secondary" role="alert">
                 <p>Veuillez vous connecter afin de pouvoir déposer une annonce</p>
@@ -17,5 +32,6 @@
             </div>
         {% endif %}
         <a href="{{ path('item_index') }}">back to list</a>
+
     </div>
 {% endblock %}
