--- a/templates/comment/new.html.twig
+++ b/templates/comment/new.html.twig
@@ -1,11 +1,7 @@
-{% extends 'base.html.twig' %}
-
-{% block title %}New Comment{% endblock %}
-
 {% block body %}
-    <h1>Create new Comment</h1>
+    <h1>Laisser un commentaire</h1>
 
     {{ include('comment/_form.html.twig') }}
 
-    <a href="{{ path('comment_index') }}">back to list</a>
+
 {% endblock %}
