--- a/templates/item/show.html.twig
+++ b/templates/item/show.html.twig
@@ -125,10 +125,19 @@
         <ul class="list-unstyled">
             {% for comment in comments %}
                 <li class="media mb-1">
+                {% if comment.user.photo == null %}
+                <div class="img-thumbnail imgless-item imgless-item--user">
+                    <i class="fa fa-user"></i>
+                </div>
+            {% else %}
                     <img class="mr-3" src="{{ asset('uploads/' ~ comment.user.photo) }}" alt="{{ comment.user.fullname }}">
+                {% endif %}
                     <div class="media-body">
-                        <h5 class="mt-0 mb-1">{{ comment.user.fullname }}</h5>
-                        <h6>Posté le {{ comment.createdat|date('d-m-Y') }}</h6>
+                        <h5 class="mt-0 mb-1"><a href="{{ path('user_show', {'id' : comment.user.id}) }}">{{ comment.user.fullname }}</a></h5>
+                        <h6 class="mb-0">Posté le {{ comment.createdat|date('d-m-Y') }}</h6>
+                        {% if is_granted('ROLE_ADMIN') %}
+                            <a class="moderate" href="{{ path('comment_show', {'id' : comment.id }) }}">Modérer le commentaire</a>
+                        {% endif %}
                         <p>{{ comment.content }}</p>
                     </div>
                 </li>
