--- a/templates/user/show.html.twig
+++ b/templates/user/show.html.twig
@@ -3,6 +3,20 @@
 {% block title %}User{% endblock %}
 
 {% block body %}
+    <div class="container">
+        <h1>{{ user.fullname }}</h1>
+        {% if user.photo == null %}
+            <div class="img-thumbnail imgless-item imgless-item--user">
+                <i class="fa fa-user"></i>
+            </div>
+        {% else %}
+            <img src="{{ asset('uploads/' ~ user.photo) }}" alt="{{ user.fullname }}">
+        {% endif %}
+        <a href="" class="btn btn-primary">
+            <i class="fa fa-envelope"></i>
+            Envoyer un message
+        </a>
+    </div>
     <h1>User</h1>
 
     <table class="table">
@@ -37,7 +51,7 @@
             </tr>
             <tr>
                 <th>Roles</th>
-                <td>{{ user.roles }}</td>
+
             </tr>
         </tbody>
     </table>
