--- a/templates/pm/index.html.twig
+++ b/templates/pm/index.html.twig
@@ -3,37 +3,51 @@
 {% block title %}Pm index{% endblock %}
 
 {% block body %}
-    <h1>Pm index</h1>
-
-    <table class="table">
-        <thead>
-            <tr>
-                <th>Id</th>
-                <th>Title</th>
-                <th>Content</th>
-                <th>Date</th>
-                <th>actions</th>
-            </tr>
-        </thead>
-        <tbody>
-        {% for pm in pms %}
-            <tr>
-                <td>{{ pm.id }}</td>
-                <td>{{ pm.title }}</td>
-                <td>{{ pm.content }}</td>
-                <td>{{ pm.date ? pm.date|date('Y-m-d H:i:s') : '' }}</td>
-                <td>
-                    <a href="{{ path('pm_show', {'id': pm.id}) }}">show</a>
-                    <a href="{{ path('pm_edit', {'id': pm.id}) }}">edit</a>
-                </td>
-            </tr>
-        {% else %}
-            <tr>
-                <td colspan="5">no records found</td>
-            </tr>
+    <div class="container">
+        <h1>Mes messages privés</h1>
+        {% for pm_sent in pms_sent %}
+            <a href="{{ path('pm_show', {'id' : pm_sent.id}) }}">
+            {{ pm_sent.title }}
+            </a>
         {% endfor %}
-        </tbody>
-    </table>
+        {% for pm_received in pms_received %}
+            {{ pm_received.title }}
+        {% endfor %}
+        <a href="{{ path('pm_new') }}" class="btn btn-success">
+            <i class="fa fa-envelope"></i>
+            Nouveau message
+        </a>
+    </div>
 
-    <a href="{{ path('pm_new') }}">Create new</a>
+    {#<table class="table">#}
+        {#<thead>#}
+            {#<tr>#}
+                {#<th>Id</th>#}
+                {#<th>Title</th>#}
+                {#<th>Content</th>#}
+                {#<th>Date</th>#}
+                {#<th>actions</th>#}
+            {#</tr>#}
+        {#</thead>#}
+        {#<tbody>#}
+        {#{% for pm in pms %}#}
+            {#<tr>#}
+                {#<td>{{ pm.id }}</td>#}
+                {#<td>{{ pm.title }}</td>#}
+                {#<td>{{ pm.content }}</td>#}
+                {#<td>{{ pm.date ? pm.date|date('Y-m-d H:i:s') : '' }}</td>#}
+                {#<td>#}
+                    {#<a href="{{ path('pm_show', {'id': pm.id}) }}">show</a>#}
+                    {#<a href="{{ path('pm_edit', {'id': pm.id}) }}">edit</a>#}
+                {#</td>#}
+            {#</tr>#}
+        {#{% else %}#}
+            {#<tr>#}
+                {#<td colspan="5">no records found</td>#}
+            {#</tr>#}
+        {#{% endfor %}#}
+        {#</tbody>#}
+    {#</table>#}
+
+
 {% endblock %}
