--- a/templates/pm/show.html.twig
+++ b/templates/pm/show.html.twig
@@ -1,34 +1,32 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Pm{% endblock %}
+{% block title %}Lire un message privé{% endblock %}
 
 {% block body %}
-    <h1>Pm</h1>
+    <div class="container">
+        <div class="card">
+            <div class="card-body">
+                <h5 class="card-title">{{ pm.title }}</h5>
+                <div class="d-flex border-top border-bottom pt-2 pb-2 align-items-center">
+                    <label class="mr-1 h6 mb-0 font-weight-light">De</label> <h6 class="card-subtitle m-0">{{ pm.userfrom }}</h6>
+                </div>
+                <div class="d-flex border-bottom pt-2 pb-2 align-items-center">
+                    <label class="mr-1 h6 mb-0 font-weight-light">Le</label> <h6 class="card-subtitle m-0">{{ pm.date|date("d-m-y") }}</h6>
+                </div>
+                <p class="card-text mt-2">
+                    {{ pm.content }}
+                </p>
+            </div>
+            <div class="card-footer">
+                <a href="" class="btn btn-success">
+                    <i class="fa fa-check"></i>
+                    Répondre
+                </a>
+                {{ include('pm/_delete_form.html.twig') }}
+            </div>
+        </div>
+        <a href="{{ path('pm_index') }}" class="badge badge-primary">Retour</a>
+    </div>
 
-    <table class="table">
-        <tbody>
-            <tr>
-                <th>Id</th>
-                <td>{{ pm.id }}</td>
-            </tr>
-            <tr>
-                <th>Title</th>
-                <td>{{ pm.title }}</td>
-            </tr>
-            <tr>
-                <th>Content</th>
-                <td>{{ pm.content }}</td>
-            </tr>
-            <tr>
-                <th>Date</th>
-                <td>{{ pm.date ? pm.date|date('Y-m-d H:i:s') : '' }}</td>
-            </tr>
-        </tbody>
-    </table>
 
-    <a href="{{ path('pm_index') }}">back to list</a>
-
-    <a href="{{ path('pm_edit', {'id': pm.id}) }}">edit</a>
-
-    {{ include('pm/_delete_form.html.twig') }}
 {% endblock %}
