Changement du statut de l'objet

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -94,6 +94,9 @@
                             </ul>
                         </div>
                     </div>
+                    <div class="row">
+                        <a href="{{ path('admin') }}">Panneau d'administration</a>
+                    </div>
                 </footer>
             </div>
         {% endblock %}
