Amélioration des vues

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,7 +3,7 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <meta charset="UTF-8">
-        <title>{% block title %}Trouvé{% endblock %}</title>
+        <title>{% block title %}Traouvé{% endblock %}</title>
         {% block stylesheet %}
             {{ encore_entry_link_tags('app') }}
         {% endblock %}
