--- a/templates/category/show.html.twig
+++ b/templates/category/show.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Category{% endblock %}
+{% block title %}Catégorie {{ category.label }}{% endblock %}
 
 {% block body %}
     <div class="container">
@@ -11,31 +11,5 @@
             {% endfor %}
         </section>
 
-    <table class="table">
-        <tbody>
-            <tr>
-                <th>Id</th>
-                <td>{{ category.id }}</td>
-            </tr>
-            <tr>
-                <th>Label</th>
-                <td>{{ category.label }}</td>
-            </tr>
-            <tr>
-                <th>Icon</th>
-                <td>{{ category.icon }}</td>
-            </tr>
-            <tr>
-                <th>Color</th>
-                <td>{{ category.color }}</td>
-            </tr>
-        </tbody>
-    </table>
-
-    <a href="{{ path('category_index') }}">back to list</a>
-
-    <a href="{{ path('category_edit', {'id': category.id}) }}">edit</a>
-
-    {{ include('category/_delete_form.html.twig') }}
     </div>
 {% endblock %}
