--- a/templates/item/show.html.twig
+++ b/templates/item/show.html.twig
@@ -3,59 +3,6 @@
 {% block title %}Item{% endblock %}
 
 {% block body %}
-    <h1>Item</h1>
-
-    <table class="table">
-        <tbody>
-            <tr>
-                <th>Id</th>
-                <td>{{ item.id }}</td>
-            </tr>
-            <tr>
-                <th>Name</th>
-                <td>{{ item.name }}</td>
-            </tr>
-            <tr>
-                <th>Photo</th>
-                <td>{{ item.photo }}</td>
-            </tr>
-            <tr>
-                <th>Description</th>
-                <td>{{ item.description }}</td>
-            </tr>
-            <tr>
-                <th>Address</th>
-                <td>{{ item.address }}</td>
-            </tr>
-            <tr>
-                <th>City</th>
-                <td>{{ item.city }}</td>
-            </tr>
-            <tr>
-                <th>DateBegin</th>
-                <td>{{ item.dateBegin ? item.dateBegin|date('Y-m-d H:i:s') : '' }}</td>
-            </tr>
-            <tr>
-                <th>DateEnd</th>
-                <td>{{ item.dateEnd ? item.dateEnd|date('Y-m-d H:i:s') : '' }}</td>
-            </tr>
-            <tr>
-                <th>CreatedAt</th>
-                <td>{{ item.createdAt ? item.createdAt|date('Y-m-d H:i:s') : '' }}</td>
-            </tr>
-            <tr>
-                <th>UpdatedAt</th>
-                <td>{{ item.updatedAt ? item.updatedAt|date('Y-m-d H:i:s') : '' }}</td>
-            </tr>
-        </tbody>
-    </table>
-
-    <a href="{{ path('item_index') }}">back to list</a>
-
-    <a href="{{ path('item_edit', {'id': item.id}) }}">edit</a>
-
-    {{ include('item/_delete_form.html.twig') }}
-
     <div class="container">
         <div class="card object-card">
             <h1 class="card-header">
@@ -79,16 +26,19 @@
                     </div>
                     <div class="col-md-8">
                         <p>{{ item.description }}</p>
+                        {% if item.address %}
+                            <p>{{ item.address }}</p>
+                        {% endif %}
                     </div>
                 </div>
-                {% if app.user.id == item.id or is_granted('IS_AUTHENTICATED_FULLY') %}
+                {% if is_granted('IS_AUTHENTICATED_FULLY')and app.user.id == item.id %}
                 <div class="d-flex justify-content-end pr-1 mb-2">
                     <a href="{{ path('item_edit', {'id': item.id}) }}" class="badge badge-info">éditer l'objet</a>
                 </div>
                 {% endif %}
                 <div class="d-flex">
                     <div class="flex-fill d-flex flex-column justify-content-center align-items-end item-user">
-                        <p class="m-0">Par <b>{{ item.user.fullname }}</b></p>
+                        <p class="m-0">Par <b><a href="{{ path('user_show', {'id' : item.user.id}) }}">{{ item.user.fullname }}</a></b></p>
                         <p class="m-0">Le {{ item.createdat|date("d/m/Y") }}</b></p>
                     </div>
                     <div>
@@ -108,11 +58,13 @@
                     <li><a href="{{ path('category_show', {'id' : item.category.id}) }}" class="badge" style="background-color: {{ item.category.color }};"><i class="fa {{ item.category.icon }}"></i> {{ item.category.label }}</a></li>
                     <li><a href="#" class="badge badge-info"><i class="fa fa-calendar"></i> {{ item.datebegin|date("d/m/Y") }}</a></li>
                     <li><a href="{{ path('item_city', {'city' : item.city}) }}" class="badge badge-info"><i class="fa fa-map-marker"></i> {{ item.city }}</a></li>
-                    {% if item.user.id == app.user.id %}
+
+                    {% if is_granted('IS_AUTHENTICATED_FULLY') and item.user.id == app.user.id %}
                         <li class="ml-auto">
                             <a href="{{ path('item_change_status', {'id' : item.id}) }}" class="badge badge-primary">J'ai retrouvé mon objet</a>
                         </li>
                     {% endif %}
+
 
                 </ul>
             </footer>
