--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Log in!{% endblock %}
+{% block title %}Se connecter{% endblock %}
 
 {% block body %}
     <div class="container">
@@ -9,13 +9,13 @@
                 <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
             {% endif %}
 
-            <h1 class="h3 mb-3">Please sign in</h1>
+            <h1 class="h3 mb-3">Se connecter</h1>
             <div class="form-group">
             <label for="inputEmail" class="sr-only">Email</label>
             <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" placeholder="Email" required autofocus>
             </div>
             <div class="form-group">
-            <label for="inputPassword" class="sr-only">Password</label>
+            <label for="inputPassword" class="sr-only">Mot de passe</label>
             <input type="password" name="password" id="inputPassword" class="form-control" placeholder="Mot de passe" required>
             </div>
 
@@ -35,7 +35,7 @@
             #}
 
             <button class="btn btn-lg btn-primary" type="submit">
-                Sign in
+                Connexion
             </button>
         </form>
     </div>
